--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">orderfood</string>
     <string name="all_items">All items</string>
+    <string name="kuku_special">Kuku Special</string>
+    <string name="add_to_cart">Add to Cart</string>
 </resources>
